tests/sksl/errors/ReservedNameUnion.glsl
### Compilation failed:

error: 1: name 'union' is reserved
int union;
    ^^^^^
1 error
